[gd_scene load_steps=6 format=3 uid="uid://soo142csxxxi"]

[ext_resource type="Texture2D" uid="uid://ss0cek62ksv5" path="res://assets/ui/up.png" id="1_o2ut6"]
[ext_resource type="Script" path="res://scenes/MemoryManager.gd" id="1_xkkyp"]
[ext_resource type="Texture2D" uid="uid://dn136vtmnaep" path="res://assets/ui/down.png" id="2_w0hc1"]
[ext_resource type="FontFile" uid="uid://ck2sp0iypcks" path="res://assets/fonts/RobotoMono-Regular.ttf" id="4_x5vw3"]
[ext_resource type="PackedScene" uid="uid://dpighqrkisujs" path="res://scenes/highlighted_text_entry.tscn" id="5_euamx"]

[node name="MemoryManager" type="MarginContainer"]
offset_left = 4.0
offset_top = 4.0
offset_right = 841.0
offset_bottom = 226.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_xkkyp")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UpButton" type="TextureButton" parent="VBox/Top"]
layout_mode = 2
texture_normal = ExtResource("1_o2ut6")

[node name="DownButton" type="TextureButton" parent="VBox/Top"]
layout_mode = 2
texture_normal = ExtResource("2_w0hc1")

[node name="C" type="Control" parent="VBox/Top"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SizeList" type="MenuButton" parent="VBox/Top"]
unique_name_in_owner = true
layout_mode = 2
text = "Size:"
flat = false

[node name="SizeLabel" type="Label" parent="VBox/Top"]
unique_name_in_owner = true
layout_mode = 2
text = "64K"
vertical_alignment = 2

[node name="WidthButton" type="Button" parent="VBox/Top"]
layout_mode = 2
text = "Width:"

[node name="WidthLabel" type="Label" parent="VBox/Top"]
unique_name_in_owner = true
layout_mode = 2
text = "8"
vertical_alignment = 2

[node name="C2" type="Control" parent="VBox/Top"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="VBox/Top"]
layout_mode = 2
focus_mode = 0
text = "Save"

[node name="EraseButton" type="Button" parent="VBox/Top"]
layout_mode = 2
text = "Erase"

[node name="Grid" type="GridContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
columns = 18

[node name="Addr" type="Label" parent="VBox/Grid"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_x5vw3")
text = "0000:"

[node name="Word" parent="VBox/Grid" instance=ExtResource("5_euamx")]
unique_name_in_owner = true
layout_mode = 2

[node name="Chrs" type="Label" parent="VBox/Grid"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_x5vw3")
text = "...abc..."

[node name="Tray" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="."]
size = Vector2i(900, 500)
access = 2
filters = PackedStringArray("*.bin ; Binary file")

[connection signal="pressed" from="VBox/Top/UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="VBox/Top/DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="VBox/Top/WidthButton" to="." method="_on_width_button_pressed"]
[connection signal="pressed" from="VBox/Top/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBox/Top/EraseButton" to="." method="_on_erase_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
